# PneuTrunk

./: README.md
pneutrunk_analzy/: checkWorkspace.py  cr_mode_calibration.py  pneutrunk_forwardKinematics.py  pneutrunk_workspace.py  pneutrunk_workspaceAddBig.py  pneutrunk_workspaceAddSmall.py
pneutrunk_analzy/Experimental data/: calibrationContinuumMode.xlsx  kalibracia novych potenciometrov.xlsx
pneutrunk_ball_detection/: package.xml  setup.cfg  setup.py
pneutrunk_ball_detection/pneutrunk_ball_detection/: cameraPublisher.py
pneutrunk_bringup/: CMakeLists.txt  package.xml
pneutrunk_bringup/launch/: pneutrunk_launch.py
pneutrunk_description/: CMakeLists.txt  package.xml
pneutrunk_description/config/: visualize.rviz
pneutrunk_description/launch/: visualize_launch.py
pneutrunk_description/meshes/: base_link.STL  tool.STL  tool.stl
pneutrunk_description/urdf/: pneutrunk.xacro  pneutrunk_table_macro.xacro  segment_macro.xacro
pneutrunk_gesture_control/: package.xml  setup.cfg  setup.py
pneutrunk_gesture_control/pneutrunk_gesture_control/: gesture_control.py  keypoint_classifier.py  point_history_classifier.py
pneutrunk_gui/: CMakeLists.txt  CMakeLists.txt.user.f5259de  package.xml
pneutrunk_gui/Forms/: mainwindow.ui
pneutrunk_gui/Headers/: mainwindow.h  ros_module.h
pneutrunk_gui/Icons/: files.qrc
pneutrunk_gui/Sources/: main.cpp  mainwindow.cpp  ros_module.cpp
pneutrunk_msgs/: CMakeLists.txt  package.xml
pneutrunk_msgs/msg/: PneutrunkJointState.msg  SegmentState.msg
pneutrunk_mujoco/: Readme.md  neuron_set.py  requirements.txt  sender_angels.py  test_neuron_data.py
pneutrunk_mujoco/angles/: nn_module_1v4.0.h5  nn_module_2v4.0.h5  nn_module_3v4.0.h5  nn_module_4v4.0.h5  nn_module_5v4.0.h5  nn_module_6v4.0.h5  scaler_X_2.pkl  scaler_X_4.pkl  scaler_y_1.pkl  scaler_y_2.pkl  scaler_y_3.pkl  scaler_y_4.pkl  scaler_y_5.pkl
pneutrunk_mujoco/data/: data1.xlsx  data2.xlsx  data3.xlsx  data4.xlsx  data5.xlsx  data6.xlsx
pneutrunk_mujoco/to_mujoco/: myrob1.xml
pneutrunk_mujoco/to_mujoco/stl/: joint_new15_1.stl  joint_new22_1.stl  joint_new6_1.stl  smallpart7_1.stl  smallpart8_1.stl
pneutrunk_object_detection/: package.xml  setup.cfg  setup.py
pneutrunk_object_detection/pneutrunk_object_detection/: ex.py  object_detection.py  own.py
pneutrunk_plc/: Global.typ  pneutrunk_V2.isopen
pneutrunk_plc/Libraries/regulatory/: ANSIC.lby  FF_PID_r.c  PID_c.c  PID_co.h  lib_properties.txt  reg_FF_PI_pl_regr_stiff.h  reg_FF_PI_pl_regr_stiff_data.c  regulator_FF_PI_plane_regress.c  regulator_FF_PI_plane_regress_types.h
pneutrunk_plc/Logical/: Global.typ  Global.var  Package.pkg
pneutrunk_plc/Logical/Source/: Package.pkg
pneutrunk_plc/Logical/meranie/: global.txt  multiword_types.h  pneutrunkMeranie.c  pneutrunkMeranie.h
pneutrunk_plc/Logical/solo_reg/: pneutr2_reg_FF_stiff_private.h  pneutr2_reg_FF_stiff_types.h  rtGetInf.c  rtGetNaN.h  rtmodel.h
pneutrunk_plc/Logical/test_input/: multiword_types.h  rtGetInf.c  rtGetNaN.h  rt_nonfinite.c  rtwtypes.h  simulink_2_plc_data.c  simulink_2_plc_private.h  test_input.c
pneutrunk_plc/MATLAB_includes/: package.pkg
pneutrunk_plc/MATLAB_includes/R2021b/: mem_mgr.h
pneutrunk_plc/MATLAB_includes/R2023a/: package.pkg
pneutrunk_plc/Physical/Config1/: Hardware.hw
pneutrunk_plc/Source/: Package.pkg
pneutrunk_plc/Source/Controller/: Cyclic.st  Init.st  Types.typ
pneutrunk_plc/Source/MATLAB_includes/: Package.pkg
pneutrunk_plc/Source/Program/: Cyclic.st
pneutrunk_plc/Temp/Includes/: Globaltyp.h  Globalvar.h  regulatory.h
pneutrunk_plc/Temp/Objects/: Declarations.lst  ProjectOptions.opt  Symbols.map
pneutrunk_plc/meranie/: meranie.c  pneutrunkMeranie_dt.h  pneutrunkMeranie_private.h  pneutrunkMeranie_types.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rtmodel.h  task_properties.txt  zero_crossing_types.h
pneutrunk_plc/meranie/extmode/: rtiostream_tcpip_static.c
pneutrunk_plc/solo_reg/: multiword_types.h  pneutr2_reg_FF_stiff.h  pneutr2_reg_FF_stiff_data.c  rt_nonfinite.c  task_properties.txt
pneutrunk_plc/test_input/: ANSIC.prg  global.txt  rtGetInf.h  rt_defines.h  rtmodel.h  simulink_2_plc.c  simulink_2_plc.h  simulink_2_plc_types.h
pneutrunk_plc_brno/Logical/: Global.typ
pneutrunk_plc_brno/Logical/Libraries/: Package.pkg
pneutrunk_plc_brno/Logical/meranie/: ANSIC.prg  rtwtypes.h
pneutrunk_plc_brno/Logical/solo_reg/: rt_defines.h  rtwtypes.h
pneutrunk_plc_brno/Logical/test_input/: zero_crossing_types.h
pneutrunk_plc_brno/Temp/: PowerConsumption.fbpw
pneutrunk_plc_brno/Temp/Includes/: Globaltyp.h
pneutrunk_plc_brno/Temp/Objects/: Declarations.lst  ProjectOptions.opt  Symbols.map
pneutrunk_plc_experiments/: calibrationContinuumMode.xlsx
pneutrunk_plc_experiments/Logical/: Global.typ  Global.var  Package.pkg
pneutrunk_plc_experiments/Logical/Source/: riadenie.var
pneutrunk_plc_experiments/Logical/meranie/: rtGetInf.c  rt_nonfinite.h
pneutrunk_plc_experiments/Logical/solo_reg/: ANSIC.prg  global.txt  rtGetInf.h  solo_reg.c  zero_crossing_types.h
pneutrunk_plc_experiments/Logical/test_input/: simulink_2_plc_dt.h  task_properties.txt
pneutrunk_plc_experiments/Temp/Includes/: Globaltyp.h  Globalvar.h
pneutrunk_plc_interface/Logical/: Package.pkg
pneutrunk_plc_pc_interface/pc/: receiver.py  sender.py
pneutrunk_ros2/: README.md  plc_sender.py
pneutrunk_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml  stylesheet.qss
pneutrunk_rviz_plugin/include/pneutrunk_rviz_plugin/: pneutrunk_plugin.h
pneutrunk_rviz_plugin/src/: pneutrunk_plugin.cpp
pneutrunk_solver/: README.md  package.xml  setup.cfg  setup.py
pneutrunk_solver/pneutrunk_solver/: desired_position.py  experiment_camera_ready.py  ik_solver.py  plc_message.py
pneutrunk_tools/: CMakeLists.txt  package.xml
pneutrunk_tools/include/pneutrunk_tools/: continuum_kinematics.h  continuum_model.h
pneutrunk_tools/src/: continuum_kinematics.cpp  continuum_model.cpp  main.cpp
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: cameraPublisher.py  main.py  subscriberImage.py
(+908 files in other folders)
