<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pneutrunk_solver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ivan.virgala@tuke.sk">km</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>math</depend>
  <depend>example_interfaces</depend>
  <depend>std_msg</depend>
  <depend>scipy</depend>
  <depend>pneutrunk_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
